# simple_vs

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: mavlink.launch  video_resize.launch  video_stream_dji _h264.launch  video_stream_dji.launch  video_stream_dji_h264.launch  video_streamer.launch  video_streamer_compress.launch
resources/: guide.md  mediamtx.yml
scripts/: Resize.py  gi-ros.py  gstreamer-ros.py  gstreamer.py  readMAV-ROS.py  readMAV.py  ros-test.py  srv_catec.py  streamTopic.py  test_dji.py  theora_video_streamer.py
simple_vs/: CMakeLists.txt  README.md  package.xml
simple_vs/launch/: video_streamer.launch  video_streamer_compress.launch
simple_vs/src/: video_streamer.cpp  video_streamer_compress.cpp
src/: video_resize.cpp  video_streamer.cpp  video_streamer_dji.cpp  video_streamer_dji_H264.cpp
